# schedule_server

./: .gitignore  Cargo.toml  DOCS.md  Makefile.toml  README.md  logs.txt
src/: client.rs  database.rs  main.rs  models.rs  server.rs
src/client/: mod.rs  rawdata.rs
src/server/: filters.rs  handlers.rs  mark.rs  mod.rs  modules.rs  monthmark.rs  user.rs
