[package]
name = "schedule285_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
# HTTP Server
warp = "0.3"